[package]
name = "bloomf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "perf_bench"
harness = false

[lib]
name = "bloomf"
path = "src/lib.rs"
